--- a/Elecrtonics/src/main/resources/application.properties
+++ b/Elecrtonics/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/electronics
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create
+
+
+
