updated mvc with crossorigin annotation for reactjs

--- a/Elecrtonics/pom.xml
+++ b/Elecrtonics/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>21.14.0</version>
+
+		</dependency>
 	</dependencies>
 
 	<build>
